<resources>
    <string name="app_name">miniseeker</string>
    <string name="the_miniseeker">THE MINISEEKER</string>
    <string name="sukhwinder_singh">Developer: \nSukhwinder Singh</string>
    <string name="main_menu">Main Menu</string>
    <string name="play_game">Play Game</string>
    <string name="options">Options</string>
    <string name="help_screen">Help Screen</string>
    <string name="link"><a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home" > Course Website</a></string>
    <string name="inforamation_about_developer">Developer is currently pursuing his bachelor in Computer Science in SFU. Development of this game was a part of Assignment for the course CMPT276.</string>
    <string name="instruction_points">1.TAP on the tile to reveal mine or number of hidden mines in corresponding row and column.\n2.When a mine is found, number of hiddem mines for each of the revealed tile is updated.\n3
    A scan is performed if you tap on unrevealed tile or the mine without number.\n4.Your goal is to find all the mines using minimum number of scans.</string>
    <string name="instruction_to_play">Instruction to Play:</string>
    <string name="citation">Citation:</string>
    <string name="citation_text">Mine Icon in the GamePlay: <a href="https://commons.wikimedia.org/wiki/Crystal_Clear" >LINK</a>\nBackground Image on all Screens: <a href="https://i.pinimg.com/736x/ca/64/03/ca64032ea795ee9766e35bf2c8f7ba5a.jpg">LINK</a></string>
    <string name="scan_used1">Scan Used:</string>
    <string name="of1">of</string>
    <string name="minw1">Mines  found</string>
    <string name="scan12">Scan Used:</string>
    <string name="of12">of</string>
    <string name="minw12">Mines  found</string>
    <string name="scantop">Scan Used:</string>
    <string name="option1">*</string>
    <string name="optiontile">tiles</string>
    <string name="mineoptions">mines</string>
    <string name="help">Help</string>
    <string name="board_size">Board Size:</string>
    <string name="mines">Mines</string>
    <string name="congratulation">Congratulation</string>
    <string name="you_won">YOU WON!!!!</string>
    <string name="skip_animation">Skip animation</string>
</resources>
