<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".helpscreen">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:background="@drawable/greenbackground"
        android:scaleType="fitXY"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/help"
        android:textColor="#F5E9E9"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/inforamation_about_developer"
        android:textSize="18sp"
        android:textColor="#110101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/texthyperlink"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:linksClickable="true"

        android:text="@string/link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />



    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="182dp"
        android:text="@string/instruction_to_play"
        android:textColor="#110101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="411dp"
        android:layout_height="161dp"
        android:layout_marginTop="218dp"
        android:text="@string/instruction_points"
        android:textColor="#110101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="379dp"
        android:text="@string/citation"
        android:textColor="#110101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/citation_box"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_marginTop="403dp"
        android:text="@string/citation_text"
        android:linksClickable="true"
        android:textColor="#110101"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>