<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Mainmenu">


    <ImageView
        android:id="@+id/image4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@drawable/greenbackground"
        android:scaleType="fitXY"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="734dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/main_menu"
        android:textColor="#F5E9E9"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/game"
        android:layout_width="191dp"
        android:layout_height="41dp"
        android:layout_marginStart="287dp"
        android:layout_marginTop="113dp"
        android:drawableStart="@mipmap/mini"
        android:text="@string/play_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/options"
        android:layout_width="191dp"
        android:layout_height="41dp"
        android:layout_marginStart="287dp"
        android:layout_marginTop="181dp"
        android:drawableStart="@android:drawable/ic_menu_edit"
        android:text="@string/options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/help_screen"
        android:layout_width="191dp"
        android:layout_height="41dp"
        android:layout_marginStart="287dp"
        android:layout_marginTop="250dp"
        android:drawableStart="@android:drawable/ic_menu_help"
        android:text="@string/help_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>